--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingHorizontal="10dp"
     tools:context=".HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -15,15 +16,80 @@
         android:textSize="20sp"
         android:gravity="center_horizontal"/>
 
-    <Button
-        android:id="@+id/btn_play"
+    <ListView
+        android:id="@+id/listView"
         android:layout_below="@+id/title"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginTop="50dp"
-        android:text="Play"
-        android:textSize="16sp"
-        android:textColor="@color/white"/>
+        android:padding="10dp"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text="Title of song"
+                android:textSize="18dp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text="Single of song"
+                android:textSize="14dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/imv_previous"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:background="@drawable/ic_previous"
+                android:text="Play"
+                android:textSize="16sp"
+                android:textColor="@color/white"/>
+
+            <ImageView
+                android:id="@+id/imv_play"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_play"
+                android:text="Play"
+                android:textSize="16sp"
+                android:textColor="@color/white"/>
+
+            <ImageView
+                android:id="@+id/imv_next"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:background="@drawable/ic_next"
+                android:text="Play"
+                android:textSize="16sp"
+                android:textColor="@color/white"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
