--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingHorizontal="10dp"
     android:layout_marginBottom="140dp"
     tools:context=".HomeFragment">
@@ -21,12 +22,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
         android:padding="10dp"
-        android:background="@color/white"
+        android:background="@drawable/border_corner"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:visibility="gone">
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/item_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="center_vertical"
+            android:background="@color/gray"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_logo"
+            app:shapeAppearanceOverlay="@style/Circle"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -41,7 +52,9 @@
                 android:gravity="center_vertical"
                 android:text="Title of song"
                 android:textSize="18dp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:ellipsize="end"
+                android:maxLines="1"/>
 
             <TextView
                 android:id="@+id/tv_artist"
@@ -49,7 +62,9 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:text="Artist of song"
-                android:textSize="14dp"/>
+                android:textSize="14dp"
+                android:ellipsize="end"
+                android:maxLines="1"/>
 
         </LinearLayout>
 
@@ -95,6 +110,8 @@
         android:layout_below="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:divider="@color/gray"
+        android:dividerHeight="1dp"/>
 
 </RelativeLayout>
