--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -40,73 +40,118 @@
             app:shapeAppearanceOverlay="@style/Circle"/>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:text="Title of song"
-                android:textSize="18dp"
-                android:textStyle="bold"
-                android:ellipsize="end"
-                android:maxLines="1"/>
-
-            <TextView
-                android:id="@+id/tv_artist"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:text="Artist of song"
-                android:textSize="14dp"
-                android:ellipsize="end"
-                android:maxLines="1"/>
-
-            <SeekBar
-                android:id="@+id/seekBar"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:max="100"
-                android:padding="10dp" />
+                android:orientation="horizontal">
 
-        </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
+                    <TextView
+                        android:id="@+id/tv_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:text="Title of song"
+                        android:textSize="18dp"
+                        android:textStyle="bold"
+                        android:ellipsize="end"
+                        android:maxLines="1"/>
 
-            <ImageView
-                android:id="@+id/imv_previous"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:background="@drawable/ic_previous"
-                android:text="Play"
-                android:textSize="16sp"
-                android:textColor="@color/white"/>
+                    <TextView
+                        android:id="@+id/tv_artist"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:text="Artist of song"
+                        android:textSize="14dp"
+                        android:ellipsize="end"
+                        android:maxLines="1"/>
 
-            <ImageView
-                android:id="@+id/imv_play"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_play"
-                android:text="Play"
-                android:textSize="16sp"
-                android:textColor="@color/white"/>
+                </LinearLayout>
 
-            <ImageView
-                android:id="@+id/imv_next"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:background="@drawable/ic_next"
-                android:text="Play"
-                android:textSize="16sp"
-                android:textColor="@color/white"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical">
+
+                    <ImageView
+                        android:id="@+id/imv_previous"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:background="@drawable/ic_previous"
+                        android:text="Play"
+                        android:textSize="16sp"
+                        android:textColor="@color/white"/>
+
+                    <ImageView
+                        android:id="@+id/imv_play"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/ic_play"
+                        android:text="Play"
+                        android:textSize="16sp"
+                        android:textColor="@color/white"/>
+
+                    <ImageView
+                        android:id="@+id/imv_next"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:background="@drawable/ic_next"
+                        android:text="Play"
+                        android:textSize="16sp"
+                        android:textColor="@color/white"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:paddingHorizontal="5dp"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/tv_position"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:text="00:00"
+                    android:textSize="14dp"
+                    android:ellipsize="end"
+                    android:maxLines="1"/>
+
+                <SeekBar
+                    android:id="@+id/seekBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:max="100"
+                    android:paddingVertical="5dp"/>
+
+                <TextView
+                    android:id="@+id/tv_duration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:text="00:00"
+                    android:textSize="14dp"
+                    android:ellipsize="end"
+                    android:maxLines="1"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -114,11 +159,11 @@
 
     <ListView
         android:id="@+id/listView"
-        android:layout_below="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/title"
         android:layout_marginTop="20dp"
         android:divider="@color/gray"
-        android:dividerHeight="1dp"/>
+        android:dividerHeight="1dp" />
 
 </RelativeLayout>
