--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,146 +17,6 @@
         android:textSize="20sp"
         android:gravity="center_horizontal"/>
 
-    <LinearLayout
-        android:id="@+id/layout_playing"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:padding="10dp"
-        android:background="@drawable/border_corner"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:visibility="gone">
-
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/imv_image_playing"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginRight="10dp"
-            android:layout_gravity="center_vertical"
-            android:background="@color/gray"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_logo"
-            app:shapeAppearanceOverlay="@style/Circle"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/tv_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical"
-                        android:text="Title of song"
-                        android:textSize="18dp"
-                        android:textStyle="bold"
-                        android:ellipsize="end"
-                        android:maxLines="1"/>
-
-                    <TextView
-                        android:id="@+id/tv_artist"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical"
-                        android:text="Artist of song"
-                        android:textSize="14dp"
-                        android:ellipsize="end"
-                        android:maxLines="1"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical">
-
-                    <ImageView
-                        android:id="@+id/imv_previous"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
-                        android:background="@drawable/ic_previous"
-                        android:text="Play"
-                        android:textSize="16sp"
-                        android:textColor="@color/white"/>
-
-                    <ImageView
-                        android:id="@+id/imv_play"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:src="@drawable/ic_play"
-                        android:text="Play"
-                        android:textSize="16sp"
-                        android:textColor="@color/white"/>
-
-                    <ImageView
-                        android:id="@+id/imv_next"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
-                        android:background="@drawable/ic_next"
-                        android:text="Play"
-                        android:textSize="16sp"
-                        android:textColor="@color/white"/>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:paddingHorizontal="5dp"
-                android:gravity="center">
-
-                <TextView
-                    android:id="@+id/tv_position"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:text="00:00"
-                    android:textSize="14dp"
-                    android:ellipsize="end"
-                    android:maxLines="1"/>
-
-                <SeekBar
-                    android:id="@+id/seekBar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:max="100"
-                    android:paddingVertical="5dp"/>
-
-                <TextView
-                    android:id="@+id/tv_duration"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:text="00:00"
-                    android:textSize="14dp"
-                    android:ellipsize="end"
-                    android:maxLines="1"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </LinearLayout>
-
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
@@ -165,5 +25,124 @@
         android:layout_marginTop="20dp"
         android:divider="@color/gray"
         android:dividerHeight="1dp" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_playing"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:padding="10dp"
+        android:background="@drawable/border_corner"
+        android:visibility="visible">
+
+        <ImageView
+            android:id="@+id/imv_pull_down"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_pull_down"
+            android:visibility="gone"
+            tools:ignore="MissingConstraints" />
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/imv_image_playing"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@color/gray"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_logo"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:shapeAppearanceOverlay="@style/Circle"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="Title of song"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            android:textAlignment="textStart"
+            android:ellipsize="end"
+            android:maxLines="1"
+            app:layout_constraintStart_toEndOf="@id/imv_image_playing"
+            app:layout_constraintEnd_toStartOf="@id/imv_previous"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <TextView
+            android:id="@+id/tv_artist"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="Artist of song"
+            android:textSize="14dp"
+            android:textAlignment="textStart"
+            android:ellipsize="end"
+            android:maxLines="1"
+            app:layout_constraintStart_toEndOf="@id/imv_image_playing"
+            app:layout_constraintEnd_toStartOf="@id/imv_previous"
+            app:layout_constraintTop_toBottomOf="@id/tv_title"/>
+
+        <!-- Action buttons on the right -->
+        <ImageView
+            android:id="@+id/imv_previous"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:background="@drawable/ic_previous"
+            app:layout_constraintEnd_toStartOf="@id/imv_play"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/tv_artist"/>
+
+        <ImageView
+            android:id="@+id/imv_play"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_play"
+            app:layout_constraintEnd_toStartOf="@id/imv_next"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/tv_artist"/>
+
+        <ImageView
+            android:id="@+id/imv_next"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:background="@drawable/ic_next"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/tv_artist"/>
+
+        <!-- SeekBar and Time TextViews on the bottom -->
+        <TextView
+            android:id="@+id/tv_position"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginLeft="5dp"
+            android:text="00:00"
+            android:textSize="14dp"
+            app:layout_constraintStart_toStartOf="@id/tv_title"
+            app:layout_constraintTop_toBottomOf="@id/tv_artist"/>
+
+        <SeekBar
+            android:id="@+id/seekBar"
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+            android:max="100"
+            app:layout_constraintStart_toEndOf="@id/tv_position"
+            app:layout_constraintEnd_toStartOf="@id/tv_duration"
+            app:layout_constraintTop_toBottomOf="@id/tv_artist"/>
+
+        <TextView
+            android:id="@+id/tv_duration"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginRight="5dp"
+            android:text="00:00"
+            android:textSize="14dp"
+            app:layout_constraintEnd_toEndOf="@id/imv_next"
+            app:layout_constraintTop_toBottomOf="@id/tv_artist"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
