--- a/app/src/main/res/layout/notification_custom_layout.xml
+++ b/app/src/main/res/layout/notification_custom_layout.xml
@@ -1,99 +1,72 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="8dp">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/notification_image"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:src="@drawable/ic_logo" />
+
+    <TextView
+        android:id="@+id/notification_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/notification_image"
+        android:text="Song Title"
+        android:textSize="14sp"
+        android:textColor="@android:color/black"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:layout_marginStart="8dp"/>
+
+    <TextView
+        android:id="@+id/notification_artist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/notification_title"
+        android:layout_toEndOf="@id/notification_image"
+        android:text="Artist"
+        android:textSize="12sp"
+        android:textColor="@android:color/darker_gray"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:layout_marginStart="8dp"/>
+
+    <SeekBar
+        android:id="@+id/notification_seekbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
+        android:layout_below="@id/notification_artist"
+        android:layout_toEndOf="@id/notification_image"
+        android:layout_marginStart="8dp"
+        android:max="100"/>
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/tv_song_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Song Title"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="@android:color/black" />
-
-            <TextView
-                android:id="@+id/tv_song_artist"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Song Artist"
-                android:textSize="14sp"
-                android:textColor="@android:color/black" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/btn_previous"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/ic_previous" />
-
-            <ImageView
-                android:id="@+id/btn_play_pause"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:src="@drawable/ic_play" />
-
-            <ImageView
-                android:id="@+id/btn_next"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/ic_next" />
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/notification_previous"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:gravity="center">
+        android:layout_below="@id/notification_seekbar"
+        android:src="@drawable/ic_previous"/>
 
-        <TextView
-            android:id="@+id/tv_position"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:text="00:00"
-            android:textSize="14dp" />
+    <ImageView
+        android:id="@+id/notification_play_pause"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/notification_previous"
+        android:layout_below="@id/notification_seekbar"
+        android:layout_marginStart="16dp"
+        android:src="@drawable/ic_play"/>
 
-        <SeekBar
-            android:id="@+id/seekBar"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:max="100"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp" />
+    <ImageView
+        android:id="@+id/notification_next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/notification_play_pause"
+        android:layout_below="@id/notification_seekbar"
+        android:layout_marginStart="16dp"
+        android:src="@drawable/ic_next"/>
 
-        <TextView
-            android:id="@+id/tv_duration"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:text="00:00"
-            android:textSize="14dp" />
-
-    </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
