--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="blue">#FF0000FF</color>
     <color name="red">#FF0000</color>
     <color name="gray">#EAEAEA</color>
+    <color name="gray2">#C5C5C5</color>
 </resources>
