--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -65,8 +65,8 @@
         android:layout_below="@+id/layout_search"
         android:layout_marginTop="5dp"
         android:paddingHorizontal="10dp"
-        android:divider="@color/gray"
-        android:dividerHeight="1dp" />
+        android:divider="@null"
+        android:dividerHeight="10dp" />
 
     <ProgressBar
         android:id="@+id/progressBar"
