--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -82,14 +82,15 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:paddingHorizontal="5dp"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <LinearLayout
             android:id="@+id/layout_playing_collapsed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:padding="10dp"
+            android:paddingVertical="10dp"
+            android:paddingHorizontal="5dp"
             android:background="@drawable/border_corner"
             android:orientation="horizontal"
             android:gravity="center_vertical"
@@ -149,14 +150,14 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center_vertical">
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:id="@+id/imv_previous"
                             android:layout_width="35dp"
                             android:layout_height="35dp"
                             android:background="@drawable/ic_previous"
+                            android:layout_gravity="center_vertical"
                             android:text="Play"
                             android:textSize="16sp"
                             android:textColor="@color/white"/>
@@ -165,6 +166,7 @@
                             android:id="@+id/imv_play"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
+                            android:layout_gravity="center_vertical"
                             android:src="@drawable/ic_play"
                             android:text="Play"
                             android:textSize="16sp"
@@ -174,7 +176,17 @@
                             android:id="@+id/imv_next"
                             android:layout_width="35dp"
                             android:layout_height="35dp"
+                            android:layout_gravity="center_vertical"
                             android:background="@drawable/ic_next"
+                            android:text="Play"
+                            android:textSize="16sp"
+                            android:textColor="@color/white"/>
+
+                        <ImageView
+                            android:id="@+id/imv_cancel"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:background="@drawable/ic_delete"
                             android:text="Play"
                             android:textSize="16sp"
                             android:textColor="@color/white"/>
@@ -187,13 +199,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
-                    android:paddingHorizontal="5dp"
                     android:gravity="center">
 
                     <TextView
                         android:id="@+id/tv_position"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
+                        android:layout_marginLeft="5dp"
                         android:gravity="center_vertical"
                         android:text="00:00"
                         android:textSize="14dp"
@@ -212,11 +224,22 @@
                         android:id="@+id/tv_duration"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
+                        android:layout_marginRight="5dp"
                         android:gravity="center_vertical"
                         android:text="00:00"
                         android:textSize="14dp"
                         android:ellipsize="end"
                         android:maxLines="1"/>
+
+                    <ImageView
+                        android:id="@+id/imv_repeat"
+                        android:layout_width="25dp"
+                        android:layout_height="35dp"
+                        android:background="@drawable/ic_repeat"
+                        android:text="Repeat"
+                        android:textSize="16sp"
+                        android:textColor="@color/white"/>
+
 
                 </LinearLayout>
 
