--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -233,9 +233,9 @@
 
                     <ImageView
                         android:id="@+id/imv_repeat"
-                        android:layout_width="25dp"
+                        android:layout_width="30dp"
                         android:layout_height="35dp"
-                        android:background="@drawable/ic_repeat"
+                        android:src="@drawable/ic_unrepeat"
                         android:text="Repeat"
                         android:textSize="16sp"
                         android:textColor="@color/white"/>
