Update Keep list song when delete input & Cancel media when research

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -82,7 +82,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:paddingHorizontal="5dp"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <LinearLayout
             android:id="@+id/layout_playing_collapsed"
