--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -91,7 +91,7 @@
             android:layout_gravity="bottom"
             android:paddingVertical="10dp"
             android:paddingHorizontal="5dp"
-            android:background="@drawable/border_corner"
+            android:background="@drawable/border_gradient"
             android:orientation="horizontal"
             android:gravity="center_vertical"
             android:visibility="visible">
