--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,6 +30,7 @@
             android:textSize="16sp"
             android:scrollHorizontally="true"
             android:singleLine="true"
+            android:imeOptions="actionSearch"
             android:inputType="text"
             android:ellipsize="end"/>
 
