Update Validate input - show message under layoutInput

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/pw_old"
+                android:id="@+id/layout_pw_old"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -97,10 +97,9 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="10dp"
                 android:src="@drawable/ic_unhide"
-                app:layout_constraintBottom_toBottomOf="@id/pw_old"
-                app:layout_constraintEnd_toEndOf="@id/pw_old"
-                app:layout_constraintTop_toTopOf="@id/pw_old"
-                app:layout_constraintVertical_bias="0.5" />
+                app:layout_constraintEnd_toEndOf="@id/layout_pw_old"
+                android:layout_marginTop="5dp"
+                app:layout_constraintTop_toTopOf="@id/layout_pw_old"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -110,7 +109,7 @@
             android:layout_marginTop="10dp">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/pw_new"
+                android:id="@+id/layout_pw_new"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -136,10 +135,9 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="10dp"
                 android:src="@drawable/ic_unhide"
-                app:layout_constraintBottom_toBottomOf="@id/pw_new"
-                app:layout_constraintEnd_toEndOf="@id/pw_new"
-                app:layout_constraintTop_toTopOf="@id/pw_new"
-                app:layout_constraintVertical_bias="0.5" />
+                app:layout_constraintEnd_toEndOf="@id/layout_pw_new"
+                app:layout_constraintTop_toTopOf="@id/layout_pw_new"
+                android:layout_marginTop="5dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -149,7 +147,7 @@
             android:layout_marginVertical="10dp">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/pw_new_ag"
+                android:id="@+id/layout_pw_new_ag"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -175,10 +173,9 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="10dp"
                 android:src="@drawable/ic_unhide"
-                app:layout_constraintBottom_toBottomOf="@id/pw_new_ag"
-                app:layout_constraintEnd_toEndOf="@id/pw_new_ag"
-                app:layout_constraintTop_toTopOf="@id/pw_new_ag"
-                app:layout_constraintVertical_bias="0.5" />
+                app:layout_constraintEnd_toEndOf="@id/layout_pw_new_ag"
+                app:layout_constraintTop_toTopOf="@id/layout_pw_new_ag"
+                android:layout_marginTop="5dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
