--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,6 +46,7 @@
                 android:gravity="center">
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/layout_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:boxStrokeColor="@color/blue2"
@@ -69,7 +70,7 @@
                     android:layout_marginVertical="5dp">
 
                     <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/pw"
+                        android:id="@+id/layout_password"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -84,7 +85,7 @@
                             android:id="@+id/edt_password"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
-                            android:paddingVertical="0dp"
+                            android:paddingRight="50dp"
                             android:hint="@string/login_password_hint"
                             android:inputType="textPassword" />
 
@@ -96,10 +97,9 @@
                         android:layout_height="50dp"
                         android:src="@drawable/ic_unhide"
                         android:layout_gravity="center_vertical"
-                        app:layout_constraintTop_toTopOf="@id/pw"
-                        app:layout_constraintBottom_toBottomOf="@id/pw"
-                        app:layout_constraintEnd_toEndOf="@id/pw"
-                        app:layout_constraintVertical_bias="0.5"
+                        app:layout_constraintTop_toTopOf="@id/layout_password"
+                        android:layout_marginTop="5dp"
+                        app:layout_constraintEnd_toEndOf="@id/layout_password"
                         android:layout_marginRight="10dp"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
