--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -72,6 +72,7 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layout_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp">
@@ -88,6 +89,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layout_fullName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp">
@@ -104,6 +106,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layout_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp">
@@ -126,7 +129,7 @@
                 android:layout_marginVertical="5dp">
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/pw"
+                    android:id="@+id/layout_password"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -151,10 +154,9 @@
                     android:layout_height="50dp"
                     android:src="@drawable/ic_unhide"
                     android:layout_gravity="center_vertical"
-                    app:layout_constraintTop_toTopOf="@id/pw"
-                    app:layout_constraintBottom_toBottomOf="@id/pw"
-                    app:layout_constraintEnd_toEndOf="@id/pw"
-                    app:layout_constraintVertical_bias="0.5"
+                    app:layout_constraintTop_toTopOf="@id/layout_password"
+                    android:layout_marginTop="5dp"
+                    app:layout_constraintEnd_toEndOf="@id/layout_password"
                     android:layout_marginRight="10dp"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -165,7 +167,7 @@
                 android:layout_marginVertical="5dp">
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/pw_ag"
+                    android:id="@+id/layout_password_ag"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -190,10 +192,9 @@
                     android:layout_height="50dp"
                     android:src="@drawable/ic_unhide"
                     android:layout_gravity="center_vertical"
-                    app:layout_constraintTop_toTopOf="@id/pw_ag"
-                    app:layout_constraintBottom_toBottomOf="@id/pw_ag"
-                    app:layout_constraintEnd_toEndOf="@id/pw_ag"
-                    app:layout_constraintVertical_bias="0.5"
+                    app:layout_constraintTop_toTopOf="@id/layout_password_ag"
+                    android:layout_marginTop="5dp"
+                    app:layout_constraintEnd_toEndOf="@id/layout_password_ag"
                     android:layout_marginRight="10dp"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
