--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:gravity="center_horizontal">
 
     <LinearLayout
         android:id="@+id/header"
@@ -42,18 +43,21 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_below="@id/header"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="20dp"
-        android:orientation="vertical">
+        android:layout_below="@id/header"
+        android:padding="20dp"
+        android:maxWidth="600dp">
 
         <RelativeLayout
+            android:id="@+id/avatar_layout"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginVertical="20dp">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_gravity="center_horizontal">
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/imv_avatar"
@@ -75,8 +79,12 @@
 
         <TextView
             android:id="@+id/tv_fullName"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:paddingVertical="10dp"
+            app:layout_constraintTop_toBottomOf="@id/avatar_layout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginBottom="10dp"
             android:textSize="22sp"
             android:textColor="@color/blue2"
@@ -84,15 +92,23 @@
             android:textAlignment="center"/>
 
         <View
-            android:layout_width="match_parent"
+            android:id="@+id/divider"
+            android:layout_width="0dp"
             android:layout_height="1dp"
+            android:paddingBottom="10dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_fullName"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:background="@color/gray"/>
 
         <TextView
             android:id="@+id/btn_logout"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="45dp"
-            android:layout_marginVertical="20dp"
+            android:layout_marginVertical="10dp"
+            app:layout_constraintTop_toBottomOf="@id/divider"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:background="@drawable/border_button"
             android:gravity="center"
             android:text="@string/logout"
@@ -100,7 +116,7 @@
             android:textColor="@color/red"
             android:textSize="16sp" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <FrameLayout
         android:id="@+id/fragment_container"
@@ -109,4 +125,4 @@
         android:layout_weight="1"
         android:background="@color/white"/>
 
-</RelativeLayout>
+</LinearLayout>
