--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:gravity="center_horizontal">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/header"
@@ -26,9 +27,9 @@
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_weight="0.8"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:paddingVertical="2dp"
                 android:text="@string/edit_profile"
                 android:textSize="22sp"
@@ -48,18 +49,20 @@
 
     </androidx.cardview.widget.CardView>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="466dp"
-        android:layout_below="@id/header"
-        android:orientation="vertical"
-        android:paddingHorizontal="20dp">
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:maxWidth="600dp">
 
         <RelativeLayout
+            android:id="@+id/avatar_layout"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginVertical="20dp">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_gravity="center_horizontal">
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/imv_avatar"
@@ -76,14 +79,16 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
                 android:src="@drawable/ic_camera" />
-
         </RelativeLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/layout_email"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:paddingVertical="10dp"
+            app:layout_constraintTop_toBottomOf="@id/avatar_layout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:boxStrokeColor="@color/blue2"
             app:boxStrokeErrorColor="@color/red">
 
@@ -95,17 +100,17 @@
                 android:hint="@string/login_email_hint"
                 android:inputType="textEmailAddress"
                 android:paddingVertical="0dp"
-                android:textColor="@color/black">
-
-            </com.google.android.material.textfield.TextInputEditText>
-
+                android:textColor="@color/black"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/layout_fullName"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:paddingBottom="10dp"
+            app:layout_constraintTop_toBottomOf="@id/layout_email"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:boxStrokeColor="@color/blue2"
             app:boxStrokeErrorColor="@color/red">
 
@@ -115,17 +120,17 @@
                 android:layout_height="50dp"
                 android:hint="@string/fullname"
                 android:inputType="text"
-                android:paddingVertical="0dp">
-
-            </com.google.android.material.textfield.TextInputEditText>
-
+                android:paddingVertical="0dp"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/layout_phone"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:paddingBottom="10dp"
+            app:layout_constraintTop_toBottomOf="@id/layout_fullName"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:boxStrokeColor="@color/blue2"
             app:boxStrokeErrorColor="@color/red">
 
@@ -135,15 +140,12 @@
                 android:layout_height="50dp"
                 android:hint="@string/phone"
                 android:inputType="phone"
-                android:paddingVertical="0dp">
-
-            </com.google.android.material.textfield.TextInputEditText>
-
+                android:paddingVertical="0dp"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/btn_update"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="45dp"
             android:layout_marginVertical="10dp"
             android:background="@drawable/border_button_fill"
@@ -151,27 +153,31 @@
             android:text="@string/update"
             android:textAllCaps="true"
             android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@id/layout_phone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
             android:id="@+id/btn_change_password"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="45dp"
-            android:layout_marginVertical="10dp"
+            android:layout_marginVertical="20dp"
             android:background="@drawable/border_button"
             android:gravity="center"
             android:text="@string/change_password"
             android:textAllCaps="true"
             android:textColor="@color/blue2"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@id/btn_update"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:background="@color/white"/>
-
 </LinearLayout>
