Update Background icon_edit & icon_camera

--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -72,6 +72,7 @@
                 android:layout_height="30dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
+                android:background="@drawable/border_corner"
                 android:src="@drawable/ic_edit"/>
 
         </RelativeLayout>
