--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -78,6 +78,7 @@
                 android:layout_height="30dp"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
+                android:background="@drawable/border_corner"
                 android:src="@drawable/ic_camera" />
         </RelativeLayout>
 
